# RoboticsEnvDev

./: .gitignore  .gitmodules  README.md  README.md.old  dsrl.md  pyproject.toml  test.py  train_base.sh  train_pi_star06.sh  train_value.sh
3d_model/: box.urdf  so101_new_calib.xml
3d_model/franka_emika_panda/: panda.xml
env/: __init__.py  genesis_env.py
env/tasks/: simple_pick.py  sound.py  test.py
scripts/: eval_policy.py  fix_data.py  make_sim_dataset.py
src/: README.md  control_sound_test.py  dsrl.py  dsrl_agent.py  eval_policy.py  make_sim_dataset.py  make_test_dataset.py  noise_action_env.py  rl_agent.py  rl_finetune.py  rl_smolvla.py  train_dsrl_tianshou.py
src/dsrl/: custom_env.py  custom_policy.py  custom_trainer.py  dsrl.py  feature_cnn.py  train.py  train_dsrl.py  train_dsrl_tianshou.py  vision_feature_test.py
src/roboenv/env/: genesis_env.py
src/roboenv/env/tasks/: normal.py
