[project]
name = "RoboticsEnvDev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.1.1",
    "imageio>=2.37.0",
    "opencv-python>=4.11.0.86",
    "pulsectl>=24.12.0",
    "py-cpuinfo>=9.0.0",
    "pyroomacoustics>=0.8.3",
    "taichi>=1.7.3",
    "transformers>=4.51.3",
]
