[project]
name = "RoboticsEnvDev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.1.1",
    "imageio>=2.37.0",
    "opencv-python>=4.11.0.86",
    "pulsectl>=24.12.0",
    "py-cpuinfo>=9.0.0",
    "pyroomacoustics>=0.8.3",
    "pytest>=8.3.5",
    "taichi>=1.7.3",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.51.3",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
