[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "RoboticsEnvDev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "genesis-world>=0.4.6",
    "lerobot",
    "torch",
    "torchvision",
    "wandb",
]

[tool.hatch.build.targets.wheel]
packages = ["src/roboenv"]

[tool.uv.sources]
lerobot = { path = "lerobot", editable = true }
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
